fix text overflow at overlay bottom

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -496,6 +496,7 @@
     align-items: flex-end;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+    overflow-wrap: anywhere;
 }
 
 .mo-card-content-top {
